--- a/src/common/index.css
+++ b/src/common/index.css
@@ -2,4 +2,10 @@
 @import '/src/common/theme.css';
 @import '/src/common/a11y.css';
 @import '/src/common/base.css';
-@import "/src/common/animation.css";
+@import '/src/common/animation.css';
+
+body {
+  width: 100%;
+  max-width: 1680px;
+  margin: 0 auto;
+}
