--- a/src/componenet/css/download.css
+++ b/src/componenet/css/download.css
@@ -1,6 +1,7 @@
+/* 카드 ui 고정 */
 .download-wrap {
   display: grid;
-  background-color: white;
+  background-color: var(--white);
   grid-template-columns: repeat(2, auto) 1fr;
   align-items: center;
   padding: 16px 8px;
@@ -22,7 +23,7 @@
   .logo-d {
     inline-size: 104px;
     aspect-ratio: 1/1;
-    margin-right: 36px;
+    margin-right: 2.25rem;
   }
 
   .arrow-d {
@@ -33,12 +34,13 @@
   }
 }
 
+/* 다운로드 반응형 및 영역 작업 */
 .download-container {
-  background-color: #f5f5f5;
-  padding: 40px 24px;
+  background-color: var(--gray);
+  padding: 2.5rem 1.5rem;
 
   @media (850px <= width) {
-    padding: 56px 32px;
+    padding: 3.5rem 2rem;
   }
   h2 {
     margin-block-end: 36px;
@@ -47,7 +49,7 @@
     }
     @media (1680px <= width) {
       width: 1280px;
-      margin: 36px auto;
+      margin: 2.25rem auto;
       font-size: 2.3125rem;
       line-height: 1.4em;
     }
@@ -62,7 +64,7 @@
 
     li {
       &:first-child {
-        margin-bottom: 36px;
+        margin-bottom: 2.25rem;
       }
     }
   }
@@ -70,7 +72,7 @@
     @media (1680px <= width) {
       width: 558px;
       height: 192px;
-      margin-right: 36px;
+      margin-right: 2.25rem;
     }
   }
 }
