--- a/src/component/07-footer.html
+++ b/src/component/07-footer.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Footer Component | Likelion Bootcamp</title>
+    <title>Footer component | Likelion Bootcamp</title>
     <link rel="stylesheet" href="../common/index.css" />
     <link rel="stylesheet" href="./css/footer.css" />
   </head>
   <body>
     <a href="/index.html">Index로 이동</a>
     <hr />
-    <h1>Footer Component</h1>
+    <h1>Footer component</h1>
 
     <footer>
       <div class="footer-container">
