--- a/src/component/05-qna.html
+++ b/src/component/05-qna.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" as="style" href="/font/pretendardvariable.css" />
     <script type="module" src="/src/main.js"></script>
     <link rel="stylesheet" href="/src/common/index.css" />
-    <link rel="stylesheet" href="/src/componenet/css/qna.css" />
+    <link rel="stylesheet" href="/src/component/css/qna.css" />
     <script type="module" src="/src/js/copy-component.js"></script>
   </head>
   <body>
