--- a/src/component/css/01-nav.css
+++ b/src/component/css/01-nav.css
@@ -1,11 +1,11 @@
-* {
+/* * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   font-size: 16px;
   font-weight: 600;
   color: var(--white);
-}
+} */
 
 ui-component {
   background: red;
