[fix] 통합본 가운데 정렬
- 충돌나는 코드 주석처리
- index-box 외 배경 관련 코드 추가

--- a/src/common/index.css
+++ b/src/common/index.css
@@ -12,8 +12,20 @@
 @import '/src/component/css/06-apply.css';
 @import '/src/component/css/07-footer.css';
 
-body {
+.index-box {
+  width: 100%;
+}
+.index-wrap {
   width: 100%;
   max-width: 1680px;
   margin: 0 auto;
+  /* background-color: pink; */
+}
+
+.bg-black {
+  background-color: var(--black);
+}
+
+.bg-gray {
+  background-color: var(--gray);
 }
