--- a/src/component/css/03-about.css
+++ b/src/component/css/03-about.css
@@ -24,6 +24,7 @@
   box-sizing: border-box;
   max-width: 1280px;
   margin: 0 auto;
+  justify-content: center;
 }
 
 @media (max-width <= 900px) {
