--- a/src/common/index.css
+++ b/src/common/index.css
@@ -28,3 +28,11 @@
 .bg-gray {
   background-color: var(--gray);
 }
+
+h2 {
+  font-size: 28.43px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 140%;
+  padding-bottom: 36px;
+}
