--- a/src/component/css/05-qna.css
+++ b/src/component/css/05-qna.css
@@ -9,12 +9,12 @@
   margin: 0 auto;
 }
 
-.faq-title {
+/* .faq-title {
   font-size: 32px;
   font-weight: 700;
   margin: 0 0 24px;
   color: var(--black);
-}
+} */
 
 /* each item */
 .faq-item {
@@ -25,12 +25,13 @@
 .faq-q {
   list-style: none;
   cursor: pointer;
-  padding: 18px 44px 18px 0;
+  padding: 18px 44px 18px 16px;
   font-size: 14px;
   font-weight: 600;
   color: var(--black);
   position: relative;
   line-height: 1.4;
+  /* margin-left: 1.25rem; */
 }
 
 /* + 아이콘 */
@@ -54,19 +55,18 @@
 .faq-a {
   padding: 0 0 18px;
   font-size: 14px;
-  line-height: 1.7;
 
   p {
-    margin: 0 0 10px;
+    padding-inline: 16px;
   }
 
   ul {
-    margin: 0;
-    padding-left: 18px;
+    /* margin: 0; */
+    padding-left: 32px;
   }
 
   li {
-    margin: 6px 0;
+    margin: 8px 0;
   }
 }
 
