다운로드 푸터 너비 수정

--- a/src/component/css/07-footer.css
+++ b/src/component/css/07-footer.css
@@ -75,6 +75,7 @@ footer {
     /* 위치 및 언언 */
     .lang-location {
       display: flex;
+      align-items: center;
       color: var(--white);
       width: 24px;
       height: 24px;
