--- a/src/common/theme.css
+++ b/src/common/theme.css
@@ -4,4 +4,9 @@
   --white: rgba(255, 255, 255, 1);
   --gray: rgba(245, 245, 245, 1);
   --gray-100: #575757;
+  --error: #e11900;
+  --error-bg: rgba(225, 25, 0, 0.1);
+  --content-bottom: #a6a6a6;
+  --green: #048848;
+  --green-bg: rgba(4, 136, 72, 0.1);
 }
