--- a/src/component/css/05-qna.css
+++ b/src/component/css/05-qna.css
@@ -72,11 +72,19 @@
 
 /* ========== Tablet ========== */
 @media (width<=900px) {
-  /* 필요 없을 거 같음 */
+  .faq {
+    max-width: 900px;
+    width: 100%;
+    padding: 56px 32px;
+  }
 }
 
 /* ========== Mobile ========== */
 @media (width<=500px) {
+  .faq {
+    padding: 40px 24px;
+  }
+
   .faq-title {
     font-size: 22px;
   }
